chore: add yamap link

--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,7 @@
     <h2>連絡先</h2>
     <ul>
       <li>X: <a href="https://x.com/kagaorange" target="_blank">@kagaorange</a></li>
+      <li>YAMAP: <a href="https://yamap.com/users/1655422" target="_blank">mikan</a></li>
       <li>Email: <code>mikan@aomikan.org</code></li>
     </ul>
   </body>
