chore: change index link

--- a/public/nakasendo.html
+++ b/public/nakasendo.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <h1>
-      <a href="index.html"><span class="logo-font">旧街道足跡マップ</span> α版</a>
+      <a href="./"><span class="logo-font">旧街道足跡マップ</span> α版</a>
       <span class="sep">&gt;</span>
       中山道69次+初期中山道
     </h1>
