feat: add tokaido

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,10 @@
         <a href="nakasendo.html"><span class="logo-font">中山道69次+初期中山道</span></a>
         <small>[2023/7/17 69次完歩] [2024/9/14 初期道完歩]</small>
       </li>
-      <li><span class="logo-font">東海道53次</span> <small>[2024/5/5 完歩]</small></li>
+      <li>
+        <a href="tokaido.html"><span class="logo-font">東海道53次</span></a>
+        <small>[2024/5/5 完歩]</small>
+      </li>
       <li><span class="logo-font">日光街道</span> <small>[2024/11/4 完歩]</small></li>
       <li><span class="logo-font">奥州街道 (白河以南)</span> <small>[2025/1/26 完歩]</small></li>
       <li><span class="logo-font">甲州街道</span> <small>[2025/8/2 完歩]</small></li>
