--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,10 @@
         <a href="tokaido.html"><span class="logo-font">東海道53次</span></a>
         <small>[2024/5/5 完歩]</small>
       </li>
-      <li><span class="logo-font">日光街道</span> <small>[2024/11/4 完歩]</small></li>
+      <li>
+        <a href="nikko.html"><span class="logo-font">日光街道</span></a>
+        <small>[2024/11/4 完歩]</small>
+      </li>
       <li><span class="logo-font">奥州街道 (白河以南)</span> <small>[2025/1/26 完歩]</small></li>
       <li><span class="logo-font">甲州街道</span> <small>[2025/8/2 完歩]</small></li>
     </ul>
