feat: add koshu

--- a/public/index.html
+++ b/public/index.html
@@ -21,37 +21,48 @@
     <h2>五街道</h2>
     <ul>
       <li>
-        <a href="nakasendo.html"><span class="logo-font">中山道69次+初期中山道</span></a>
-        <small>[2023/7/17 完歩]</small>
+        <a href="nakasendo.html"><span class="kaido-title">中山道69次+初期中山道</span></a>
+        <small>東京都, 埼玉県, 群馬県, 長野県, 岐阜県, 滋賀県, 京都府 [2023/7/17 完歩]</small>
       </li>
       <li>
-        <a href="tokaido.html"><span class="logo-font">東海道53次</span></a>
-        <small>[2024/5/5 完歩]</small>
+        <a href="tokaido.html"><span class="kaido-title">東海道53次</span></a>
+        <small>東京都, 神奈川県, 静岡県, 愛知県, 三重県, 滋賀県, 京都府 [2024/5/5 完歩]</small>
       </li>
       <li>
-        <a href="nikko.html"><span class="logo-font">日光街道</span></a>
-        <small>[2024/11/4 完歩]</small>
+        <a href="nikko.html"><span class="kaido-title">日光街道</span></a>
+        <small>東京都, 埼玉県, 茨城県, 栃木県 [2024/11/4 完歩]</small>
       </li>
       <li>
-        <a href="oshu.html"><span class="logo-font">奥州街道 (白河以南)</span></a>
-        <small>[2025/1/26 完歩]</small>
+        <a href="oshu.html"><span class="kaido-title">奥州街道 (白河以南)</span></a>
+        <small>栃木県, 福島県 [2025/1/26 完歩]</small>
       </li>
-      <li><span class="logo-font">甲州街道</span> <small>[2025/8/2 完歩]</small></li>
+      <li>
+        <a href="koshu.html"><span class="kaido-title">甲州街道</span></a>
+        <small>東京都, 神奈川県, 山梨県, 長野県 [2025/8/2 完歩]</small>
+      </li>
     </ul>
     <h2>脇往還</h2>
     <ul>
       <li>
-        <a href="nakahara.html"><span class="logo-font">中原街道</span></a>
-        <small>[2024/7/27 完歩]</small>
+        <a href="nakahara.html"><span class="kaido-title">中原街道</span></a>
+        <small>東京都, 神奈川県 [2024/7/27 完歩]</small>
       </li>
-      <li><span class="logo-font">川越街道</span> <small>[2025/8/2 完歩]</small></li>
-      <li><span class="logo-font">奥州街道 (白河以北)</span> ※攻略中 (未踏: 一戸以北)</li>
-      <li><span class="logo-font">水戸街道</span> ※攻略中 (未踏: 取手以北)</li>
+      <li>
+        <span class="kaido-title">川越街道</span> <small>東京都, 埼玉県 [2025/8/2 完歩]</small>
+      </li>
+      <li>
+        <span class="kaido-title">奥州街道 (白河以北)</span> ※攻略中 (未踏: 一戸以北)
+        <small>福島県, 宮城県, 岩手県, 青森県</small>
+      </li>
+      <li>
+        <span class="kaido-title">水戸街道</span> ※攻略中 (未踏: 取手以北)
+        <small>東京都, 千葉県, 茨城県</small>
+      </li>
     </ul>
     <h2>ご案内</h2>
     <h3>開発ロードマップ</h3>
     <ol>
-      <li>五街道 GPX データの公開</li>
+      <li><s>五街道 GPX データの公開</s> <strong>✔️</strong></li>
       <li>五街道の推奨歩行ルートの作成</li>
       <li>脇往還の GPX データの公開</li>
       <li>脇往還の推奨歩行ルートの作成</li>
