feat: add kawagoe

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,8 @@
         <small>東京都, 神奈川県 [2024/7/27 完歩]</small>
       </li>
       <li>
-        <span class="kaido-title">川越街道</span> <small>東京都, 埼玉県 [2025/8/2 完歩]</small>
+        <a href="kawagoe.html"><span class="kaido-title">川越街道</span></a>
+        <small>東京都, 埼玉県 [2025/8/2 完歩]</small>
       </li>
       <li>
         <span class="kaido-title">奥州街道 (白河以北)</span> ※攻略中 (未踏: 一戸以北)
