chore: add hinata and konjyaku to acknowledgments

--- a/public/index.html
+++ b/public/index.html
@@ -101,6 +101,11 @@
         データの記録や主要街道のルート案内を便利に使わせて頂いております
       </li>
       <li>
+        <a href="https://hgis.pref.miyazaki.lg.jp/hinata/" target="_blank">ひなた GIS</a> &amp;
+        <a href="https://ktgis.net/kjmapw/" target="_blank">今昔マップ on the web</a> &ndash;
+        古地図参照の決定版、ルートの下調べに活用しております
+      </li>
+      <li>
         <a href="https://leafletjs.com/" target="_blank">Leaflet</a> &amp;
         <a href="https://github.com/mpetazzoni/leaflet-gpx" target="_blank">leaflet-gpx</a> &ndash;
         地図描画ライブラリとして本サイトで活用しております
