fix: pos of nihonbashi and sanjyo

--- a/public/kawagoe.html
+++ b/public/kawagoe.html
@@ -40,7 +40,7 @@
 
       // Stations
       const markers = [
-        { name: "日本橋", lat: "35.6839621", lng: "139.7743418" },
+        { name: "日本橋", lat: "35.684112", lng: "139.774533" },
         { name: "平尾追分", lat: "35.749627", lng: "139.714079" },
         { name: "川越城", lat: "35.924836", lng: "139.485455" },
       ];
