--- a/public/koshu.html
+++ b/public/koshu.html
@@ -40,7 +40,7 @@
 
       // Stations
       const markers = [
-        { name: "日本橋", lat: "35.6839621", lng: "139.7743418" },
+        { name: "日本橋", lat: "35.684112", lng: "139.774533" },
         { name: "下諏訪宿", lat: "36.076148", lng: "138.089988" },
       ];
       const iconMarkers = L.featureGroup();
