--- a/public/nikko.html
+++ b/public/nikko.html
@@ -40,7 +40,7 @@
 
       // Stations
       const markers = [
-        { name: "日本橋", lat: "35.6839621", lng: "139.7743418" },
+        { name: "日本橋", lat: "35.684112", lng: "139.774533" },
         { name: "日光東照宮", lat: "36.757875", lng: "139.598757" },
       ];
       const iconMarkers = L.featureGroup();
