--- a/public/tokaido.html
+++ b/public/tokaido.html
@@ -40,8 +40,8 @@
 
       // Stations
       const markers = [
-        { name: "日本橋", lat: "35.6839621", lng: "139.7743418" },
-        { name: "三条大橋", lat: "35.0082961", lng: "135.7712051" },
+        { name: "日本橋", lat: "35.684112", lng: "139.774533" },
+        { name: "三条大橋", lat: "35.009044", lng: "135.771801" },
       ];
       const iconMarkers = L.featureGroup();
       setMarkers(L, stationOverlay, iconMarkers, markers);
