--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="author" content="kagaorange" />
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BHV6TYCEL3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-BHV6TYCEL3");
+    </script>
     <title>旧街道足跡マップ α版</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
