--- a/public/oshu.html
+++ b/public/oshu.html
@@ -4,6 +4,15 @@
     <meta charset="utf-8" />
     <meta name="author" content="kagaorange" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BHV6TYCEL3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-BHV6TYCEL3");
+    </script>
     <title>旧街道足跡マップ α版 &ndash; 奥州街道 (白河以南)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
