--- a/public/location_picker.html
+++ b/public/location_picker.html
@@ -40,9 +40,32 @@
         座標:
         <input id="location" size="24" />
       </label>
+      <button id="history" style="height: 24px">履歴</button>
     </h1>
-    <div id="map" style="cursor: crosshair"></div>
+    <div id="map" style="cursor: crosshair; display: block"></div>
+    <pre
+      id="log"
+      style="
+        position: absolute;
+        top: 30px;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        margin: 0;
+        padding: 10px;
+        color: lightgreen;
+        background: black;
+        display: none;
+      "
+    ></pre>
     <script>
+      const buttonHistory = document.getElementById("history");
+      const log = document.getElementById("log");
+      buttonHistory.addEventListener("click", () => {
+        log.style.display = log.style.display === "block" ? "none" : "block";
+        const mapElm = document.getElementById("map");
+        mapElm.style.display = mapElm.style.display === "none" ? "block" : "none";
+      });
       const inputLocation = document.getElementById("location");
       inputLocation.addEventListener("focus", () => inputLocation.select());
       const map = L.map("map");
@@ -83,6 +106,7 @@
         const lng = Math.round(e.latlng.lng * 10000000) / 10000000;
         inputLocation.setAttribute("value", lat + "," + lng);
         navigator.clipboard.writeText(lat + "," + lng);
+        log.innerHTML = log.innerHTML + "[" + lat + ", " + lng + "],\n";
         L.featureGroup().addLayer(
           L.marker([lat, lng])
             .addTo(map)
