feat: enable gsi map

--- a/public/index.html
+++ b/public/index.html
@@ -101,6 +101,13 @@
       掲載している情報についてお気づきの点がありましたら、お知らせください。
       なお、本サイトの経路は江戸時代のルートになるべく近くなるように辿っていますが、さまざまな要因から完全に再現しているわけではありません。
     </p>
+    <h3>ツール</h3>
+    <ul>
+      <li>
+        <a href="location_picker.html">地図座標取得ツール</a> &ndash;
+        地図から緯度経度を効率よく取得するツール
+      </li>
+    </ul>
     <h3>連絡先</h3>
     <ul>
       <li>X: <a href="https://x.com/kagaorange" target="_blank">@kagaorange</a></li>
@@ -117,6 +124,10 @@
         <a href="https://hgis.pref.miyazaki.lg.jp/hinata/" target="_blank">ひなた GIS</a> &amp;
         <a href="https://ktgis.net/kjmapw/" target="_blank">今昔マップ on the web</a> &ndash;
         古地図参照の決定版、ルートの下調べに活用しております
+      </li>
+      <li>
+        <a href="https://maps.gsi.go.jp/" target="_blank">地理院地図</a> &ndash;
+        未舗装路歩きの強い味方、本サイトでの地図活用についてはリアルタイム読込なら利用申請不要との回答を国土地理院より頂きました
       </li>
       <li>
         <a href="https://leafletjs.com/" target="_blank">Leaflet</a> &amp;
