chore: doc update

--- a/public/index.html
+++ b/public/index.html
@@ -74,8 +74,23 @@
       </li>
     </ul>
     <h2>ご案内</h2>
+    <h3>おすすめ歩行ルートとは</h3>
+    <p>
+      本サイトで公開している「おすすめ歩行ルート」 (赤い線) は、古地図などの情報を基にした
+      <strong>現在現実的に歩ける道の中で江戸時代の道筋に最も近いルート</strong>
+      の案内を目指しています。
+      そのため市販のガイドブック類や他サイト等で紹介されている道筋よりも通行難易度が高かったり、不自然に遠回りな道筋になっている箇所があります。
+      また道は常に変化しており、以前は通行できた道が通れなくなることもよくあるため、
+      <strong>常に最新の情報にアップデート</strong>
+      することを目指しています。
+    </p>
+    <p>
+      おすすめ歩行ルートに誤りを見つけたり恒久的に通行できなくなったりしていることを発見した際は、写真等を添えてお知らせください。
+      将来ウォーキングに挑戦する方々に可能な限り不便のない情報を届けたいと考えています。
+    </p>
     <h3>更新履歴</h3>
     <ul>
+      <li>2026/03/01 中山道69次のおすすめ歩行ルートの公開開始</li>
       <li>2026/02/25 サイト立ち上げ、五街道、中原街道、川越街道の GPX データの公開開始</li>
     </ul>
     <h3>開発ロードマップ</h3>
@@ -89,7 +104,6 @@
       <li>各街道のその他見どころ・注意点等の執筆</li>
       <li>この殺風景なトップページをなんとかする</li>
     </ol>
-    <p>推奨歩行ルートに誤りを見つけたり恒久的に通行できなくなったりした際はお知らせください。</p>
     <p>
       情報や GPX データ等を寄贈してくれる方がいましたらお知らせください。
       将来的にはたくさんの方の足跡を集合させたヒートマップを作ってみたいと考えています。
@@ -98,10 +112,8 @@
     <p>
       本サイトで紹介している情報は歩いた当時のもので、最新の状態とは異なる可能性があります。
       ウォーキングされる際は、最新の情報をよくお確かめください。
-      私道になっていたり、季節によって通行できなかったり、一部危険なところ等も含まれる可能性もあります。
       本サイトで紹介した情報を参考にしたことによるいかなるトラブルも本サイトは責任を負いかねますのでご了承ください。
       掲載している情報についてお気づきの点がありましたら、お知らせください。
-      なお、本サイトの経路は江戸時代のルートになるべく近くなるように辿っていますが、さまざまな要因から完全に再現しているわけではありません。
     </p>
     <h3>ツール</h3>
     <ul>
@@ -135,6 +147,11 @@
         <a href="https://leafletjs.com/" target="_blank">Leaflet</a> &amp;
         <a href="https://github.com/mpetazzoni/leaflet-gpx" target="_blank">leaflet-gpx</a> &ndash;
         地図描画ライブラリとして本サイトで活用しております
+      </li>
+      <li>
+        <a href="https://kiso-nagano.ne.jp/" target="_blank">木曽観光連盟</a> &
+        <a href="https://enreiojo.jp/" target="_blank">塩嶺天城観光開発協議会</a> &ndash;
+        木曽路や初期中山道の詳細なルート情報がとても参考になりました
       </li>
     </ul>
     <p>日本全国の素晴らしい街道を支える皆様に心より感謝いたします。</p>
